--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ body {
   -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none; /* Non-prefixed version, currently
                                 supported by Chrome, Edge, Opera and Firefox */
+  overflow-x: hidden;
 }
 
 code {
@@ -48,7 +49,62 @@ code {
   box-shadow: inset 0 0 6px rgb(255, 0, 0);
   border-radius: 10px;
 }
-
+::-webkit-scrollbar-button {
+  width: 5px;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-corner {
+  width: 5px;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-track {
+  background: linear-gradient(rgb(255, 0, 0), rgb(0, 0, 0));
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 6px rgb(255, 0, 0);
+  border-radius: 10px;
+}
+/* ============.scrollbar-none =========== */
+.scrollbar-none::-webkit-scrollbar {
+  width: 0;
+  border-radius: 0;
+}
+.scrollbar-none::-webkit-scrollbar-button {
+  width: 0;
+  border-radius: 0;
+}
+.scrollbar-none::-webkit-scrollbar-corner {
+  width: 0;
+  border-radius: 0;
+}
+.scrollbar-none::-webkit-scrollbar-track {
+  background: linear-gradient(rgb(255, 0, 0), rgb(0, 0, 0));
+  border-radius: 0;
+}
+.scrollbar-none::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 6px rgb(255, 0, 0);
+  border-radius: 0;
+}
+.scrollbar-none::-webkit-scrollbar-button {
+  width: 0;
+  border-radius: 0;
+}
+.scrollbar-none::-webkit-scrollbar-corner {
+  width: 0;
+  border-radius: 0;
+}
+.scrollbar-none::-webkit-scrollbar-track {
+  background: linear-gradient(rgb(255, 0, 0), rgb(0, 0, 0));
+  border-radius: 0;
+}
+.scrollbar-none::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 6px rgb(255, 0, 0);
+  border-radius: 0;
+}
 .smooth {
   @apply transition-all duration-500 ease-linear;
+}
+.scale-base {
+  @apply transform scale-100 hover:scale-105 hover:text-red-400 transition-all duration-500 ease-linear;
 }
