--- a/src/index.css
+++ b/src/index.css
@@ -108,3 +108,11 @@ code {
 .scale-base {
   @apply transform scale-100 hover:scale-105 hover:text-red-400 transition-all duration-500 ease-linear;
 }
+
+.image-border {
+  -webkit-text-stroke: 2px #e83a3b;
+  /* filter: grayscale(100); */
+}
+.cusrom-drop-shadow {
+  filter: drop-shadow(8px 8px 0px #e83a3b);
+}
